--- a/sound/templates/sound/header.html
+++ b/sound/templates/sound/header.html
@@ -9,19 +9,19 @@
 <body>
 	<div class="navb">
 		<div class="logo">
-			Welcome to a study of music
+			<a href="/sound/">Sonic Explorations with Lucas and Hunter</a>
 		</div>
 		<div class="item">
-			<a href="#">About</a>
+			<a href="/sound/about">About</a>
 		</div>
 		<div class="item">
 			<a href="#">Past Broadcasts</a>
 		</div>
 		<div class="search">
-			<input type="search" placeholder="Search Broadcasts..."/>
+			<input type="search" placeholder="Search..."/>
 		</div>
 		<div class="search_btn">
-			<input type="button" value="Search"></input
+			<input type="button" value="Search"></input>
 		</div>
 	</div>
 </body>
