--- a/sound/static/css/styles.css
+++ b/sound/static/css/styles.css
@@ -1,23 +1,52 @@
 body{
   background: white;
+  padding: 0px;
+  margin: 0px;
 }
-h3{
+.footer{
+  background: black;
+  border-radius: 20px;
+  bottom: 10px;
+  color: lightgrey;
+  display: inline-block;
+  right: 10px;
+  opacity: 0.8;
+  padding-left: 10px;
+  padding-right: 10px;
+  position: fixed;
+}
+.no_show{
+  background: white;
   border-radius: 5px;
-  background: red;
   color: black;
-}
+  padding: 10px;
+  position: fixed;
 
+  top: 50%;
+  left: 40%;
+}
+.main_img{
+  display: block;
+  margin: 0 auto;
+  max-height: 100%;
+  max-width: 100%;
+  padding: 0;
+
+}
 .navb{
+  margin: 0%;
   align-items: center;
   background: black;
   color: lightgrey;
   display: flex;
-  padding: 15px;
-  width: 100%;
+  opacity: 0.8;
+  padding: 25px;
 }
-.navb .logo{
+.navb .logo a{
   border-radius: 10px;
-  color: lightgrey;
+  color: #3C8109;
+  font-size: 20px;
+  text-decoration: none;
 }
 .navb .item{
   padding-left: 10px;
@@ -26,9 +55,7 @@ h3{
   text-decoration: none;
   color: lightgrey;
 }
-.navb .item a:hover{
-  color: red;
-}
 .navb .search{
   padding-left: 10px;
+  right: 0;
 }
